fix: explain diff between ext and plugin

--- a/docs/developer-docs/5.40.x/core-development-concepts/basics/extensions.mdx
+++ b/docs/developer-docs/5.40.x/core-development-concepts/basics/extensions.mdx
@@ -45,3 +45,8 @@ Ultimately, the scaffold creates the base code for the new extension in the `ext
 
 </Alert>
 
+## FAQ
+
+### What is the difference between an extension and a plugin?
+
+In Webiny, extensions are used to extend the system's functionality, and an extensions can be made up of one or more plugins. A plugin is a small piece of code that adds a specific functionality to the system. For example, a plugin can be used to add a new GraphQL query or mutation, or to modify the existing one.
