feat: create 5.40.0 release notes

--- a/docs/release-notes/5.40.0/pulumi-v6.mdx
+++ b/docs/release-notes/5.40.0/pulumi-v6.mdx
@@ -17,7 +17,9 @@ import stateMachinePublish from "./assets/pulumi-v6/state-machine-publish.png";
 
 As mentioned in the [changelog](/docs/release-notes/5.40.0/changelog#introducing-pulumi-v6-4096), with this release, we've decided to update Pulumi to version 6.
 
-And although this update should not cause any breaking changes in your existing infrastructure code, we've still compiled a list of all of the things you can expect upon doing your first redeployment after the upgrade.
+And although this update should not cause any breaking changes in your existing infrastructure code, we've still compiled a list of all of the things you can expect upon doing your first redeployment after the upgrade. 
+
+Note that, on top of the changes listed in this article, you should pay extra attention to deployment logs in case you have custom cloud infrastructure (Pulumi) code in your project.
 
 <Alert type="info">
 
