--- a/docs/release-notes/5.40.0/theme-folder-updates.mdx
+++ b/docs/release-notes/5.40.0/theme-folder-updates.mdx
@@ -8,7 +8,7 @@ import { Alert } from "@/components/Alert";
 
 ## Overview
 
-As mentioned in the changelog, with this release, we've made a couple of changes to the `theme` folder, that was previously located in the `apps` folder.
+As mentioned in the [changelog](/docs/release-notes/5.40.0/changelog#theme-folder-changes-4135-4138), with this release, we've made a couple of changes to the `theme` folder, that was previously located in the `apps` folder.
 
 In short, the main changes are:
 
