feat: create 5.39.7 release notes

--- a/docs/release-notes/5.39.7/changelog.mdx
+++ b/docs/release-notes/5.39.7/changelog.mdx
@@ -14,7 +14,19 @@ import { GithubRelease } from "@/components/GithubRelease";
 
 We've detected an issue where, upon unpublishing a content entry, an internal record was not correctly updated. This issue has now been resolved, and the internal records are now correctly updated when unpublishing content entries.
 
-## Deployments
+## Page Builder
+
+### Website Settings Form - Fixed an Issue Related to Locale Switching ([#4157](https://github.com/webiny/webiny-js/pull/4157))
+
+In case a user switched to a different locale, submitting Page Builder's Website settings form would result in an error. This issue has now been resolved, and the Website settings form now works as expected, regardless of the locale being used. 
+
+## Data Migrations
+
+### Further Improving the 5.39.6-001 Data Migration ([#4154](https://github.com/webiny/webiny-js/pull/4154))
+
+We had to again revisit the 5.39.6-001 data migration. This is because the migration was taking too long to complete when large data sets were involved. We've now optimized the migration process, and it should now be much faster than before, in some cases up to 10 times faster.
+
+Note that the improved data migration is not automatically executed, and that, by default, the migration will still be executed as it was before. If you want to execute the optimized migration, please take a look at the linked pull request for more information.
 
 ### Introducing the `WEBINY_MIGRATION_LOG_STREAMING` Environment Variable ([#4136](https://github.com/webiny/webiny-js/pull/4136) [#4139](https://github.com/webiny/webiny-js/pull/4139))
 
