fix: add more instructions about react 18

--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -40,7 +40,7 @@ For more information and how to migrate your code, please refer to the separate 
 ### Updated Webiny To Use React 18 ([#3771](https://github.com/webiny/webiny-js/pull/3771))
 
 With this release, we've updated Webiny to use React `18.2.0`.
-This was a really large codebase update, and it may introduce breaking changes in your project.
+This was a really large codebase update, and it may introduce breaking changes in your project. Earlier, React was a bit more relaxed about "implicit any", but with React 18, it made its types much stricter. The upgrade guide contains instructions on how to verify that your project was upgraded correctly, before you deploy it.
 
 The biggest dependency update was to the [RMWC](https://github.com/rmwc/rmwc) package from version `8.x` to version `14.2.2`, because that version did not work with the React `18.x`.
 There were a lot of changes from `8.x` to `14.2.2`, so please check the [RMWC changelog](https://github.com/rmwc/rmwc/blob/master/CHANGELOG.md) for more information.
@@ -53,7 +53,7 @@ If you find any Webiny related issues, please report them on our [Slack channel]
 
 </Alert>
 
-### Pulumi v6  ([#4096](https://github.com/webiny/webiny-js/pull/4096))
+### Pulumi v6 ([#4096](https://github.com/webiny/webiny-js/pull/4096))
 
 As mentioned in the [Introducing Pulumi v6](#introducing-pulumi-v6-4096) section below, we've upgraded Pulumi to version 6. Although no breaking changes are expected, we've still compiled a list of all of the things you can expect upon doing your first redeployment after the upgrade [here](/docs/release-notes/5.40.0/pulumi-v6).
 
@@ -171,9 +171,9 @@ Finally, the [Reset CSS](https://meyerweb.com/eric/tools/css/reset/) styles that
 
 <Alert type={"info"}>
 
-  For existing projects, the `theme` folder will be automatically moved to the new `extensions` folder during the project upgrade process. This change will not affect any existing customizations and everything should work as expected. For more information, please refer to the separate [Theme Folder Updates](/docs/release-notes/5.40.0/theme-folder-updates) article.
+For existing projects, the `theme` folder will be automatically moved to the new `extensions` folder during the project upgrade process. This change will not affect any existing customizations and everything should work as expected. For more information, please refer to the separate [Theme Folder Updates](/docs/release-notes/5.40.0/theme-folder-updates) article.
 
-</Alert>  
+</Alert>
 
 ## Development
 
