--- a/docs/release-notes/5.40.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.40.0/upgrade-guide.mdx
@@ -46,7 +46,7 @@ This release contains a couple of breaking changes that might affect your projec
 
 #### 3.1 Removed Deprecated Backend APIs
 
-As mentioned in the [changelog](/docs/release-notes/5.40.0/changelog#removed-deprecated-ap-is-4051), with this release, we've removed a couple of backend JavaScript APIs that were marked as deprecated in previous releases. 
+As mentioned in the [changelog](/docs/release-notes/5.40.0/changelog#removed-deprecated-ap-is-4051), with this release, we've removed a couple of backend JavaScript APIs that were marked as deprecated in previous releases.
 
 Essentially, we've removed a couple of older methods used for subscribing to lifecycle events and also for performing Headless CMS-related security permissions checks.
 
@@ -54,15 +54,27 @@ Before deploying, please refer to the separate [Removed APIs](/docs/release-note
 
 #### 3.2 Removed/Replaced Frontend APIs
 
-We've also upgraded some of the Admin app components and plugins, namely `Form`, `AppPbWebsiteSettings`, and `FileManagerFileTypePlugin`. 
+We've also upgraded some of the Admin app components and plugins, namely `Form`, `AppPbWebsiteSettings`, and `FileManagerFileTypePlugin`.
 
 Before deploying, please refer to their respective sections in the [Removed APIs](/docs/release-notes/5.40.0/removed-apis) article, and make sure to update your project code, if necessary.
 
 #### 3.3 Pulumi v6
 
-With this release, we've upgraded the Pulumi version to v6. 
+With this release, we've upgraded the Pulumi version to v6.
 
-### 4. Deploy Your Project
+### 4. Run Builds Locally
+
+To verify that your project was correctly upgraded and is ready to be deployed, run the following commands:
+
+```bash
+yarn webiny build api --env=dev
+yarn webiny build admin --env=dev
+yarn webiny build website --env=dev
+```
+
+If these execute successfully, you're ready to move on to the next step, and deploy your project.
+
+### 5. Deploy Your Project
 
 Proceed by redeploying your Webiny project:
 
