feat: create 5.39.7 release notes

--- a/docs/release-notes/5.39.7/changelog.mdx
+++ b/docs/release-notes/5.39.7/changelog.mdx
@@ -14,6 +14,25 @@ import { GithubRelease } from "@/components/GithubRelease";
 
 We've detected an issue where, upon unpublishing a content entry, an internal record was not correctly updated. This issue has now been resolved, and the internal records are now correctly updated when unpublishing content entries.
 
+### Brought Back `publishedOn` and `ownedBy` Entry Meta Fields (GraphQL Schema Level) ([#4156](https://github.com/webiny/webiny-js/pull/4156))
+
+With the [5.39.0 release](/docs/release-notes/5.39.0/changelog), we've removed the following two content entry meta fields:
+
+1. `publishedOn`
+2. `ownedBy` 
+
+These fields were removed because they were replaced with the new meta fields. 
+
+However, based on the user feedback, we've realized keeping these fields at least on the GraphQL schema level is important, as some users are still using them in their applications.
+
+So, we've decided to bring back these fields to the GraphQL schema. They are marked as **deprecated**, and we recommend using the new meta fields instead. In the future, these fields will be removed from the GraphQL schema. 
+
+### Made New Meta Fields Nullable (GraphQL Schema Level) ([#4156](https://github.com/webiny/webiny-js/pull/4156))
+
+On top of bringing back the `publishedOn` and `ownedBy` fields, we've also changed the new **non-nullable** entry meta fields and make them nullable.
+
+This change was made to ensure a better experience while performing the 5.39.x data migration. Without this change, while the data migration is being performed, in most cases users with large data sets would be unable to use Headless CMS in the Admin app.
+
 ## Page Builder
 
 ### Website Settings Form - Fixed an Issue Related to Locale Switching ([#4157](https://github.com/webiny/webiny-js/pull/4157))
