feat: create 5.40.0 release notes

--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -53,9 +53,13 @@ If you find any Webiny related issues, please report them on our [Slack channel]
 
 </Alert>
 
-### Pulumi v6  ([#4096](https://github.com/webiny/webiny-js/pull/4096))
+### Pulumi v6  Upgrade ([#4096](https://github.com/webiny/webiny-js/pull/4096))
 
 As mentioned in the [Introducing Pulumi v6](#introducing-pulumi-v6-4096) section below, we've upgraded Pulumi to version 6. Although no breaking changes are expected, we've still compiled a list of all of the things you can expect upon doing your first redeployment after the upgrade [here](/docs/release-notes/5.40.0/pulumi-v6).
+
+### Page Builder - `theme` Folder Updates ([#4096](https://github.com/webiny/webiny-js/pull/4096))
+
+As mentioned in the [Theme Folder Changes](#theme-folder-changes-4135-4138) section below, with this release, we've made a couple of changes within the `apps/theme` folder. For more information, please refer to the separate [Theme Folder Updates](/docs/release-notes/5.40.0/theme-folder-updates) article.
 
 ## Headless CMS
 
