chore: update Auth0 integration article

--- a/docs/release-notes/5.39.7/changelog.mdx
+++ b/docs/release-notes/5.39.7/changelog.mdx
@@ -130,3 +130,5 @@ You can now use `process.env.WEBINY_ADMIN_ENV` in the Admin app, and `process.en
 ### Auth0 Tenant Access Control
 
 We've added the ability to programmatically control whether an identity has access to the current tenant. This is done as part of the Auth0 configuration. A dedicated optional callback was added, called `canAccessTenant`, which allows you to implement custom logic for allowing or denying an identity access to the requested tenant. As this is part of the authorization process, this essentially means that, if denied access, the identity will have no permissions on the tenant, and will be treated as a public request.
+
+To learn more about this feature, check out the [Setup Auth0](/docs/enterprise/auth0-integration#8-tenant-access-control-optional) article.
