feat: create 5.39.7 release notes

--- a/docs/release-notes/5.39.7/changelog.mdx
+++ b/docs/release-notes/5.39.7/changelog.mdx
@@ -15,7 +15,7 @@ import oldGqlFields from "./assets/old-gql-fields.png";
 
 We've detected an issue where, upon unpublishing a content entry, an internal record was not correctly updated. This issue has now been resolved, and the internal records are now correctly updated when unpublishing content entries.
 
-### Brought Back `publishedOn` and `ownedBy` Entry Meta Fields (GraphQL Schema Level) ([#4156](https://github.com/webiny/webiny-js/pull/4156))
+### Brought Back `publishedOn` and `ownedBy` Entry Meta Fields (GraphQL Schema Level) ([#4156](https://github.com/webiny/webiny-js/pull/4156), [#4161](https://github.com/webiny/webiny-js/pull/4161))
 
 With the [5.39.0 release](/docs/release-notes/5.39.0/changelog), we've removed the following two content entry meta fields:
 
