Added the missing note that webiny enterprise is required to use Cognito Federation

--- a/docs/developer-docs/5.37.x/admin-area/extending/cognito-federation.mdx
+++ b/docs/developer-docs/5.37.x/admin-area/extending/cognito-federation.mdx
@@ -10,6 +10,12 @@ import { WhatYouWillLearn } from "@/components/WhatYouWillLearn";
 import cognitoGoogle from "./assets/cognito-google.png";
 import cognitoOutput from "./assets/core-output.png";
 
+<Alert type="info" title="Can I use this?">
+
+** Webiny Enterprise license is required to use this feature.**
+
+</Alert>
+
 <CanIUseThis since={"5.37.6"} />
 
 <WhatYouWillLearn>
