fix: remove mdx extension from links

--- a/docs/developer-docs/5.39.x/headless-cms/extending/lexical-editor.mdx
+++ b/docs/developer-docs/5.39.x/headless-cms/extending/lexical-editor.mdx
@@ -22,7 +22,7 @@ In this article, we'll cover the Lexical Editor configuration for the Headless C
 
 ### Toolbar
 
-Headless CMS uses a static toolbar, which is always visible, unlike the [Page Builder](/docs/page-builder/extending/lexical-editor.mdx), which uses a floating toolbar. Webiny ships with a set of default actions, but you can add new actions, replace existing actions, or remove them completely.
+Headless CMS uses a static toolbar, which is always visible, unlike the [Page Builder](/docs/page-builder/extending/lexical-editor), which uses a floating toolbar. Webiny ships with a set of default actions, but you can add new actions, replace existing actions, or remove them completely.
 
 <Image src={staticToolbar} title="Static Rich Text Editor Toolbar" />
 
