chore: merge master and update website settings

--- a/docs/release-notes/5.40.0/removed-apis.mdx
+++ b/docs/release-notes/5.40.0/removed-apis.mdx
@@ -200,6 +200,10 @@ import gql from "graphql-tag";
 
 + const { Group, Element } = WebsiteSettingsConfig;
 
++ const MyElement = () => {
++   return <>{/* Your UI goes here */}</>
++ }
+
 export const SocialNetworks = () => {
   const socialNetworks = gql`
     {
@@ -210,14 +214,14 @@ export const SocialNetworks = () => {
   return (
 +   <WebsiteSettingsConfig>
       <Group name={"socialNetworks"} label={"Social Networks"} querySelection={socialNetworks}>
-+       <Element name={"myElement"}>{/* Your UI goes here */}</Element>
++       <Element name={"myElement"} element={<MyElement />} />
       </Group>
 +   </WebsiteSettingsConfig>
    );
 };
 ```
 
-Notice how, besides the code itself, the import changed; the `WebsiteSettingsConfig` is now imported from `@webiny/app-page-builder`.
+Notice how, besides the code itself, the import changed; the `WebsiteSettingsConfig` is now imported from `@webiny/app-page-builder`. With this new config, we recommend creating dedicated components for your elements. Usage of `children` prop is no longer supported.
 
 ## I18N
 
