feat: Advanced Tenant Management article

--- a/docs/developer-docs/5.40.x/enterprise/cognito-federation.mdx
+++ b/docs/developer-docs/5.40.x/enterprise/cognito-federation.mdx
@@ -7,11 +7,11 @@ description: Learn how to configure Cognito Federation to sign into the Admin ap
 import { CanIUseThis } from "@/components/CanIUseThis";
 import { Gallery, Image } from "@/components/Image";
 import { WhatYouWillLearn } from "@/components/WhatYouWillLearn";
-import externalOidc from "./assets/externalOidc.png";
-import onlyExternal from "./assets/onlyExternal.png";
+import externalOidc from "./assets/cognito-federation/externalOidc.png";
+import onlyExternal from "./assets/cognito-federation/onlyExternal.png";
+import userMenu from "./assets/cognito-federation/userMenu.png";
 import cognitoGoogle from "./assets/cognito-google.png";
 import cognitoOutput from "./assets/core-output.png";
-import userMenu from "./assets/userMenu.png";
 
 <CanIUseThis enterprise={true}>
 
