docs: added the community Slack link

--- a/docs/developer-docs/5.39.x/headless-cms/basics/content-modeling-best-practices.mdx
+++ b/docs/developer-docs/5.39.x/headless-cms/basics/content-modeling-best-practices.mdx
@@ -109,7 +109,7 @@ If you want to find all articles associated with a category named `abc` in the A
 
 Using Objects allows you to search and filter through the data because they are part of the entry itself, but they cannot be used as independent entities in other models.
 
-When selecting your tools, e.g., Objects vs. Reference fields, it is important to be crystal clear on your use case. If in doubt please reach out to the team on [Slack](https://www.webiny.com/slack) with the specific requirement or user story.
+When selecting your tools, e.g., Objects vs. Reference fields, it is important to be crystal clear on your use case. If in doubt please reach out to the team on community [Slack](https://www.webiny.com/slack) with the specific requirement or user story.
 
 ### Dynamic Zone
 As mentioned earlier, the Dynamic Zone field allows you to define templates for your content and validation rules for those templates. Then, while creating your content, you can decide which template you want to use from the predefined set of templates. This way you can define structure for your content writers, and have them use prebuilt content types.
