docs: fixed typo, add a minor detail about querying data with dynamic zone field

--- a/docs/developer-docs/5.39.x/headless-cms/basics/content-modeling-best-practices.mdx
+++ b/docs/developer-docs/5.39.x/headless-cms/basics/content-modeling-best-practices.mdx
@@ -104,7 +104,7 @@ Webiny supports a wide range of content model field types that allow you to crea
 Besides the default built-in attributes, you can expand Webiny with custom plugins that introduce new fields.
 
 ### Searching with Reference Field and Objects - Considerations
-Using Reference Fields, you can only search using the ID or entry ID. For example, let’s say you have two models, Article and Category. Article model has a reference field Category which is reference field and refer to Category model. 
+Using Reference Fields, you can only search using the ID or entry ID. For example, let’s say you have two models, Article and Category. Article model has a reference field Category, which refers to the Category model.
 If you want to find all articles associated with a category named `abc` in the Article model, you will first need to fetch the ID of the `abc` category from the Category model. Then, you can query using this category ID or entry ID in the Article model to retrieve the articles belonging to this category.
 
 Using Objects allows you to search and filter through the data because they are part of the entry itself, but they cannot be used as independent entities in other models.
@@ -112,6 +112,6 @@ Using Objects allows you to search and filter through the data because they are 
 When selecting your tools, e.g., Objects vs. Reference fields, it is important to be crystal clear on your use case. If in doubt please reach out to the team on community [Slack](https://www.webiny.com/slack) with the specific requirement or user story.
 
 ### Dynamic Zone
-As mentioned earlier, the Dynamic Zone field allows you to define templates for your content and validation rules for those templates. Then, while creating your content, you can decide which template you want to use from the predefined set of templates. This way you can define structure for your content writers, and have them use prebuilt content types.
+As mentioned earlier, the Dynamic Zone field allows you to define templates for your content and validation rules for those templates. Then, while creating your content, you can decide which template you want to use from the predefined set of templates. This way you can define structure for your content writers, and have them use prebuilt content types. Please note that when querying content data, you cannot filter content based on the Dynamic Zone field in the model.
 
 You can learn more about Dynamic Zone here: https://www.youtube.com/watch?v=4hOScz42_Nw
