feat: create 5.40.0 release notes

--- a/docs/developer-docs/5.40.x/infrastructure/basics/modify-cloud-infrastructure.mdx
+++ b/docs/developer-docs/5.40.x/infrastructure/basics/modify-cloud-infrastructure.mdx
@@ -405,11 +405,10 @@ const ENVIRONMENTS_USING_SHARED_ES_DOMAIN = ["dev", "other-dev"];
 
 export default createCoreApp({
   pulumiResourceNamePrefix: "wby-",
-  openSearch: ({ params }) => {
-    const { env } = params.run;
+  openSearch: ({ env }) => {
     // We use the shared Amazon OpenSearch domain only when
     // deploying into "dev" and "other-dev" environments.
-    if (ENVIRONMENTS_USING_SHARED_ES_DOMAIN.includes(env)) {
+    if (ENVIRONMENTS_USING_SHARED_ES_DOMAIN.includes(env.name)) {
       return {
         domainName: "my-opensearch-shared-domain",
         indexPrefix: `${env}_`
@@ -433,11 +432,10 @@ const ENVIRONMENTS_USING_SHARED_ES_DOMAIN = ["dev", "other-dev"];
 
 export default createApiApp({
   pulumiResourceNamePrefix: "wby-",
-  openSearch: ({ params }) => {
-    const { env } = params.run;
+  openSearch: ({ env }) => {
     // We use the shared Amazon OpenSearch domain only when
     // deploying into "dev" and "other-dev" environments.
-    if (ENVIRONMENTS_USING_SHARED_ES_DOMAIN.includes(env)) {
+    if (ENVIRONMENTS_USING_SHARED_ES_DOMAIN.includes(env.name)) {
       return {
         domainName: "my-opensearch-shared-domain",
         indexPrefix: `${env}_`
